@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - PlugAuth::Lite is now a Mojo app that uses PlugAuthLite plugin
 
 0.01      2013-05-09 16:47:47 EST5EDT
   - initial version
